--- a/_manuscript/index.qmd
+++ b/_manuscript/index.qmd
@@ -111,7 +111,7 @@ Features were engineered from all available data up to the start of each window.
 
 Candidate model configurations differed by algorithm (elastic net, random forest, XGBoost), outcome resampling method, and hyperparemter values. The best configuration for each model was selected using 6 repeats of participant-grouped 5-fold cross-validation. Our performance metric was area under the receiver operating curve (auROC). Folds were stratified by a between-subject measure of our outcome (low lapsers: 0-9 lapses; high lapsers: 10+ lapses).   
 
-We evaluated model performance with a Bayesian hierarchical generalized linear model. Posterior distributions with 95% credible intervals (CIs) were estimated from the 30 held-out test sets using weakly informative, data-dependent priors to regularize and reduce overfitting.^[Residual SD ~ normal(0, exp(2)); intercept (centered predictors) ~ normal(2.3, 1.3); window-width contrasts ~ normal(0, 2.69); covariance ~ decov(1,1,1,1).] Random intercepts were included for repeat and fold (nested within repeat). auROCs were logit-transformed and regressed on model type to estimate the probability that model performances differed systematically. 
+We evaluated model performance with a Bayesian hierarchical generalized linear model. Posterior distributions with 95% credible intervals (CI) were estimated from the 30 held-out test sets using weakly informative, data-dependent priors to regularize and reduce overfitting.^[Residual SD ~ normal(0, exp(2)); intercept (centered predictors) ~ normal(2.3, 1.3); window-width contrasts ~ normal(0, 2.69); covariance ~ decov(1,1,1,1).] Random intercepts were included for repeat and fold (nested within repeat). auROCs were logit-transformed and regressed on model type to estimate the probability that model performances differed systematically. 
 
 Our best performing models used an elastic net algorithm. We quantified feature importance by examining the retained features (i.e., coefficient value > 0) in the full model and ordering them by absolute coefficient value. These values provide an estimate of the direction and magnitude of association between each predictor and the outcome, conditional on the other features retained. All our annotated analysis scripts are publicly available on our study website ([https://jjcurtin.github.io/study_messages/](https://jjcurtin.github.io/study_messages/)).
 
@@ -130,7 +130,7 @@ All procedures were approved by the University of Wisconsin-Madison Institutiona
 {{< embed notebooks/mak_tables.qmd#tbl-2 >}} 
 
 ## Model Evaluation
-The median posterior probability for auROC for the full model was `r round(subset(pp_perf, model == "full model")$pp_median, 2)`. The 95% CIs were relatively narrow ([`r round(subset(pp_perf, model == "full model")$pp_lower, 2)`, `r round(subset(pp_perf, model == "full model")$pp_upper, 2)`]) and did not contain .5, providing strong evidence that the model is capturing signal in the data. The final model retained 13 features (@fig-1). The top four features were baseline measures of abstinence confidence, having a goal of abstinence, abstinence self-efficacy when experiencing negative affect, and craving. Communication frequency with people who don't know about the individual's recovery goals also appeared to be an important feature for increasing lapse risk.
+The median posterior auROC for the full model was `r round(subset(pp_perf, model == "full model")$pp_median, 2)`, with relatively narrow 95% CI ([`r round(subset(pp_perf, model == "full model")$pp_lower, 2)`, `r round(subset(pp_perf, model == "full model")$pp_upper, 2)`]) that did not contain .5. This provides strong evidence that the model is capturing signal in the data. The final model retained 13 features (@fig-1). The top four were baseline measures of abstinence confidence, having a goal of abstinence, abstinence self-efficacy when experiencing negative affect, and craving. Communication frequency with people unaware of the individual's recovery goals also emerged as an important feature associated with increased lapse risk.
 
 <!-- Retained communication features:
 Interesting they are all over the longer period durations - features become more meaningful with more data?
@@ -147,7 +147,7 @@ p168.l0.rratecount.cont_type.friend
 
 
 ## Model Comparison
-We evaluated a comparison model to determine the extent that cellular communications were adding predictive value above and beyond the baseline features. The baseline model retained 5 features and obtained performance nearly identical to the full model (median auROC `r round(subset(pp_perf, model == "baseline model")$pp_median, 2)`, 95% CIs [`r round(subset(pp_perf, model == "baseline model")$pp_lower, 2)`, `r round(subset(pp_perf, model == "baseline model")$pp_upper, 2)`]). There was a median difference in auROC of the full and baseline models of less than .01, yielding no evidence (52% probability) that the posterior distributions were meaningfully different.
+We evaluated a comparison model to assess the incremental predictive value of cellular communication features beyond baseline measures. The baseline model retained 5 features and achieved performance nearly identical to the full model (median auROC = `r round(subset(pp_perf, model == "baseline model")$pp_median, 2)`, 95% CI [`r round(subset(pp_perf, model == "baseline model")$pp_lower, 2)`, `r round(subset(pp_perf, model == "baseline model")$pp_upper, 2)`]). The median difference in auROC between the full and baseline models was less than .01, providing no evidence (52% probability) that their posterior distributions were meaningfully different.
 
 # Discussion
 
