--- a/_manuscript/_tex/messages.bib
+++ b/_manuscript/_tex/messages.bib
@@ -265,7 +265,7 @@
   file = {C:\Users\kpaquette2\Zotero\storage\SI3EQHSB\Carreiro et al. - 2018 - mHealth for the Detection and Intervention in Adol.pdf}
 }
 
-@article{chihPredictiveModelingAddiction2014a,
+@article{chihPredictiveModelingAddiction2014,
   title = {Predictive Modeling of Addiction Lapses in a Mobile Health Application},
   author = {Chih, Ming-Yuan and Patton, Timothy and McTavish, Fiona M. and Isham, Andrew J. and {Judkins-Fisher}, Chris L. and Atwood, Amy K. and Gustafson, David H.},
   year = {2014},
@@ -280,8 +280,8 @@
   langid = {english},
   pmcid = {PMC3963148},
   pmid = {24035143},
-  keywords = {Adult,Alcoholism,Bayes Theorem,Cell Phone,Decision Making,Female,Humans,Lapse prediction,Machine learning,Male,mHealth,Middle Aged,Mobile Applications,Models Statistical,Predictive Value of Tests,Relapse,ROC Curve,Secondary Prevention,Sensitivity and Specificity,Young Adult},
-  file = {C:\Users\kpaquette2\Zotero\storage\EG6TBBIW\Chih et al. - 2014 - Predictive modeling of addiction lapses in a mobil.pdf}
+  keywords = {Adult,Alcoholism,Bayes Theorem,Cell Phone,Cellular Phone,decision making,Decision Making,Female,Humans,Lapse prediction,machine learning,Machine learning,Male,mHealth,Middle Aged,Mobile Applications,Models Statistical,Predictive Value of Tests,Recurrence,Relapse,risk2_protocol_paper,ROC Curve,Secondary Prevention,Sensitivity and Specificity,Young Adult},
+  file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\525AS6D2\\Chih et al. - 2014 - Predictive Modeling of Addiction Lapses in a Mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\AJDAP67X\\Chih et al. - 2014 - Predictive modeling of addiction lapses in a mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\AKNIS7HY\\Chih et al. - 2014 - Predictive modeling of addiction lapses in a mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\DX62KEH7\\Chih et al. - 2014 - Predictive modeling of addiction lapses in a mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\T9CDTXJ7\\Chih et al. - 2014 - Predictive modeling of addiction lapses in a mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\VXECTSNS\\Chih2014.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\D7AQLFGL\\S0740547213001827.html}
 }
 
 @article{chungRelapseAlcoholOther2006a,
@@ -368,6 +368,23 @@
   abstract = {Despite its potential to yield information about the dynamic course of suicidal ideation/behavior in individuals' natural environment, Ecological Momentary Assessment (EMA) has been strikingly underutilized among suicidal teens. This study reports on feasibility and acceptability of ecological assessment of daily suicide risk-related outcomes (``daily diaries,'' a special case of EMA) among adolescent inpatients in the critical post-discharge period. Thirty-four adolescents (76\% female; ages 13--17) responded to daily electronic surveys for four weeks after discharge. Survey adherence was 69\% (n\,=\,650 days) and decreased each week. Adherence was half as likely among adolescents without attempt history (OR\,=\,0.50, CI\,=\,0.27--0.95). Mid- and end-point study responses indicated high acceptability of daily diaries. Most adolescents reported no change or more positive change in their thoughts/mood after daily surveys. Suicidal ideation was reported on 24.4\% (n\,=\,159) of the days. In the month post discharge, more teens reported suicidal thoughts using daily surveys (70.6\%) compared to end-of-study assessment (45.2\%) (Chi-square\,=\,4.24, p\,=\,.039). Two participants (5.9\%) reported an attempt. Ideation frequency and duration varied across time, suggesting utility of frequent assessments in this context. EMA data collection with high-risk adolescents offers a feasible approach to examining real-time suicidal ideation/behavior, yielding nuanced information that is critical to advancing suicide prevention efforts.},
   keywords = {Adolescents,Daily diary,Ecological momentary assessment,Suicidal ideation,Suicide attempts},
   file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\8D8NB622\\Czyz et al. - 2018 - Ecological assessment of daily suicidal thoughts a.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\JHPAFIL6\\S0165178117322175.html}
+}
+
+@article{dennisManagingAddictionChronic2007,
+  title = {Managing {{Addiction}} as a {{Chronic Condition}}},
+  author = {Dennis, Michael and Scott, Christy K},
+  year = {2007},
+  month = dec,
+  journal = {Addiction Science \& Clinical Practice},
+  volume = {4},
+  number = {1},
+  pages = {45--55},
+  issn = {1940-0632},
+  urldate = {2024-10-11},
+  abstract = {This article reviews progress in adapting addiction treatment to respond more fully to the chronic nature of most patients' problems. After reviewing evidence that the natural history of addiction involves recurrent cycles of relapse and recovery, we discuss emerging approaches to recovery management, including techniques for improving the continuity of care, monitoring during periods of abstinence, and early reintervention; recent developments in the field related to self-management, mutual aid, and other recovery supports; and system-level interventions. We also address the importance of adjusting treatment funding and organizational structures to better meet the needs of individuals with a chronic disease.},
+  pmcid = {PMC2797101},
+  pmid = {18292710},
+  file = {C:\Users\kpaquette2\Zotero\storage\K9SYP6ZU\Dennis and Scott - 2007 - Managing Addiction as a Chronic Condition.pdf}
 }
 
 @book{derogatislBriefSymptomInventory,
@@ -1159,6 +1176,24 @@
   file = {C:\Users\kpaquette2\Zotero\storage\CWQ6XEQG\McKIERNAN et al. - 2011 - Development of a Brief Abstinence Self-Efficacy Me.pdf}
 }
 
+@article{mclellanDrugDependenceChronic2000,
+  title = {Drug Dependence, a Chronic Medical Illness: Implications for Treatment, Insurance, and Outcomes Evaluation},
+  shorttitle = {Drug Dependence, a Chronic Medical Illness},
+  author = {McLellan, A. T. and Lewis, D. C. and O'Brien, C. P. and Kleber, H. D.},
+  year = {2000},
+  month = oct,
+  journal = {JAMA},
+  volume = {284},
+  number = {13},
+  pages = {1689--1695},
+  issn = {0098-7484},
+  doi = {10.1001/jama.284.13.1689},
+  abstract = {The effects of drug dependence on social systems has helped shape the generally held view that drug dependence is primarily a social problem, not a health problem. In turn, medical approaches to prevention and treatment are lacking. We examined evidence that drug (including alcohol) dependence is a chronic medical illness. A literature review compared the diagnoses, heritability, etiology (genetic and environmental factors), pathophysiology, and response to treatments (adherence and relapse) of drug dependence vs type 2 diabetes mellitus, hypertension, and asthma. Genetic heritability, personal choice, and environmental factors are comparably involved in the etiology and course of all of these disorders. Drug dependence produces significant and lasting changes in brain chemistry and function. Effective medications are available for treating nicotine, alcohol, and opiate dependence but not stimulant or marijuana dependence. Medication adherence and relapse rates are similar across these illnesses. Drug dependence generally has been treated as if it were an acute illness. Review results suggest that long-term care strategies of medication management and continued monitoring produce lasting benefits. Drug dependence should be insured, treated, and evaluated like other chronic illnesses. JAMA. 2000;284:1689-1695.},
+  langid = {english},
+  pmid = {11015800},
+  keywords = {Asthma,Chronic Disease,Diabetes Mellitus Type 2,Health Policy,Humans,Hypertension,Insurance Health,Outcome Assessment Health Care,Substance-Related Disorders,United States}
+}
+
 @article{millerHowEffectiveAlcoholism2001a,
   title = {How Effective Is Alcoholism Treatment in the {{United States}}?},
   author = {Miller, W. R. and Walters, S. T. and Bennett, M. E.},
@@ -1237,6 +1272,42 @@
   archiveprefix = {arXiv},
   keywords = {Computer Science - Computation and Language},
   file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\5H5QAYVD\\Mohammad and Turney - 2013 - Crowdsourcing a Word-Emotion Association Lexicon.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\PMGH4F7B\\1308.html}
+}
+
+@article{mohrPersonalSensingUnderstanding2017,
+  title = {Personal {{Sensing}}: {{Understanding Mental Health Using Ubiquitous Sensors}} and {{Machine Learning}}},
+  shorttitle = {Personal {{Sensing}}},
+  author = {Mohr, David C. and Zhang, Mi and Schueller, Stephen M.},
+  year = {2017},
+  journal = {Annual Review of Clinical Psychology},
+  volume = {13},
+  number = {1},
+  pages = {23--47},
+  doi = {10.1146/annurev-clinpsy-032816-044949},
+  urldate = {2018-06-05},
+  abstract = {Sensors in everyday devices, such as our phones, wearables, and computers, leave a stream of digital traces. Personal sensing refers to collecting and analyzing data from sensors embedded in the context of daily life with the aim of identifying human behaviors, thoughts, feelings, and traits. This article provides a critical review of personal sensing research related to mental health, focused principally on smartphones, but also including studies of wearables, social media, and computers. We provide a layered, hierarchical model for translating raw sensor data into markers of behaviors and states related to mental health. Also discussed are research methods as well as challenges, including privacy and problems of dimensionality. Although personal sensing is still in its infancy, it holds great promise as a method for conducting mental health research and as a clinical tool for monitoring at-risk populations and providing the foundation for the next generation of mobile health (or mHealth) interventions.},
+  pmid = {28375728},
+  keywords = {Humans,machine learning,Machine Learning,Mental Disorders,mental health,mHealth,Neurophysiological Monitoring,pervasive health,sensors,Telemedicine,wearables},
+  file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\3NB2JYFJ\\Mohr et al. - 2017 - Personal Sensing Understanding Mental Health Usin.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\3NIFCIMX\\Mohr et al. - 2017 - Personal Sensing Understanding Mental Health Usin.pdf}
+}
+
+@article{moshontzProspectivePredictionLapses2021,
+  title = {Prospective {{Prediction}} of {{Lapses}} in {{Opioid Use Disorder}}: {{Protocol}} for a {{Personal Sensing Study}}},
+  shorttitle = {Prospective {{Prediction}} of {{Lapses}} in {{Opioid Use Disorder}}},
+  author = {Moshontz, Hannah and Colmenares, Alejandra J. and Fronk, Gaylen E. and Sant'Ana, Sarah J. and Wyant, Kendra and Wanta, Susan E. and Maus, Adam and Jr, David H. Gustafson and Shah, Dhavan and Curtin, John J.},
+  year = {2021},
+  month = dec,
+  journal = {JMIR Research Protocols},
+  volume = {10},
+  number = {12},
+  pages = {e29563},
+  publisher = {JMIR Publications Inc., Toronto, Canada},
+  doi = {10.2196/29563},
+  urldate = {2022-02-21},
+  abstract = {Background: Successful long-term recovery from opioid use disorder (OUD) requires continuous lapse risk monitoring and appropriate use and adaptation of recovery-supportive behaviors as lapse risk changes. Available treatments often fail to support long-term recovery by failing to account for the dynamic nature of long-term recovery. Objective: The aim of this protocol paper is to describe research that aims to develop a highly contextualized lapse risk prediction model that forecasts the ongoing probability of lapse. Methods: The participants will include 480 US adults in their first year of recovery from OUD. Participants will report lapses and provide data relevant to lapse risk for a year with a digital therapeutic smartphone app through both self-report and passive personal sensing methods (eg, cellular communications and geolocation). The lapse risk prediction model will be developed using contemporary rigorous machine learning methods that optimize prediction in new data. Results: The National Institute of Drug Abuse funded this project (R01DA047315) on July 18, 2019 with a funding period from August 1, 2019 to June 30, 2024. The University of Wisconsin-Madison Health Sciences Institutional Review Board approved this project on July 9, 2019. Pilot enrollment began on April 16, 2021. Full enrollment began in September 2021. Conclusions: The model that will be developed in this project could support long-term recovery from OUD---for example, by enabling just-in-time interventions within digital therapeutics.},
+  copyright = {Unless stated otherwise, all articles are open-access distributed under the terms of the Creative Commons Attribution License (http://creativecommons.org/licenses/by/2.0/), which permits unrestricted use, distribution, and reproduction in any medium, provided the original work ("first published in JMIR Research Protocols...") is properly cited with original URL and bibliographic citation information. The complete bibliographic information, a link to the original publication on http://www.researchprotocols.org/, as well as this copyright and license information must be included.},
+  langid = {english},
+  file = {C:\Users\kpaquette2\Zotero\storage\B5CI756H\e29563.html}
 }
 
 @misc{nationalinstituteonalcoholabuseandalcoholismAlcoholTreatmentUnited2023,
@@ -1454,6 +1525,22 @@
   langid = {english},
   keywords = {Bayesian statistics,Null hypothesis significance testing (NHST),Replication crisis,Self-corrective thesis,Statistical inference,Statistical reform},
   file = {C:\Users\kpaquette2\Zotero\storage\ZFEDMDAE\Romero and Sprenger - 2021 - Scientific self-correction the Bayesian way.pdf}
+}
+
+@phdthesis{rounsavilleLapseRelapseChasing2010,
+  title = {Lapse, {{Relapse}}, and {{Chasing}} the {{Wagon}}: {{Post-Treatment Drinking}} and {{Recovery}}},
+  shorttitle = {Lapse, {{Relapse}}, and {{Chasing}} the {{Wagon}}},
+  author = {Rounsaville, Daniel Brett},
+  year = {2010},
+  address = {United States -- Maryland},
+  urldate = {2020-12-18},
+  abstract = {This study examines relapse and recovery in Project MATCH. The study examines the transitions between periods of abstinence, lapse, and relapse. A set of proximal and distal variables were hypothesized to predict the likelihood of a transition to a different state over time using a semi-Markov model. The distal variables were stable predictors of relapse including severity of addiction, drug use, and psychiatric severity. The proximal predictors, which varied over time, included anger, symptoms of depression, action, struggling with maintenance, temptation, confidence, and social support. The study examined drinking outcomes of 469 individuals post-treatment and found that confidence to abstain and action orientation increased the probability of abstinence, and decreased the probability of lapsed and relapsed drinking. Confidence and endorsing action stage behaviors and attitudes were associated with the abstinence violation effect. The constructs of temptation and struggling with maintenance acted as risk factors for higher levels of drinking. Depression had mixed effects and appeared to be related to lapsed drinking more than relapsed drinking. Alcohol involvement acted as a risk factor for relapsed drinking. Information about the individuals drinking history was also examined. The number of prior episodes in abstinence or drinking states increased the probability of returning to the same types of abstinent or drinking behaviors. The length of each episode less frequently was significantly related to the transitions, However when significant, longer periods of abstinence and relapsed drinking were associated with less likely return to the same behaviors. Of particular note was that a history of relapsed drinking made lapsed drinking less likely, and a history of lapsed drinking made relapsed drinking less likely. This pattern supports the underlying division of drinking behaviors into the two categories of lapse and relapse. This study demonstrated that novel statistical methods such as Semi-Markov models can be used to investigate questions which could not be addressed or effectively answered with more commonly used methods. The semi-Markov models of transitions between drinking states helped to explain the complexity of the road to recovery.},
+  copyright = {Database copyright ProQuest LLC; ProQuest does not claim copyright in the individual underlying works.},
+  isbn = {9781124454702},
+  langid = {english},
+  school = {University of Maryland, Baltimore County},
+  keywords = {Addiction,Alcohol abuse,Lapses,Psychology,Relapses,Sobriety},
+  file = {C:\Users\kpaquette2\Zotero\storage\UC8TVZHW\Rounsaville - 2010 - Lapse, Relapse, and Chasing the Wagon Post-Treatm.pdf}
 }
 
 @article{schulerPerceivedBarriersTreatment2015,
@@ -1814,7 +1901,7 @@
   file = {C:\Users\kpaquette2\Zotero\storage\6ZI2CJET\Williams et al. - 2018 - Barriers to and Facilitators of Alcohol Use Disord.pdf}
 }
 
-@article{witkiewitzModelingComplexityPosttreatment2007a,
+@article{witkiewitzModelingComplexityPosttreatment2007,
   title = {Modeling the Complexity of Post-Treatment Drinking: {{It}}'s a Rocky Road to Relapse},
   shorttitle = {Modeling the Complexity of Post-Treatment Drinking},
   author = {Witkiewitz, Katie and Marlatt, G. Alan},
@@ -1827,47 +1914,50 @@
   pages = {724--738},
   issn = {0272-7358},
   doi = {10.1016/j.cpr.2007.01.002},
-  urldate = {2024-01-16},
+  urldate = {2014-09-15},
   abstract = {The most widely cited road block to successful treatment outcomes for psychological and substance use disorders has been described as the return to the previous behavior, or ``relapse.'' The operational definition of ``relapse'' varies from study to study and between clinicians, but in general the term is used to indicate the return to previous levels of symptomatic behavior. One explanation for the variation in the operationalization of relapse is the wide variety of behaviors for which the term is applied, including (but not limited to): depression, substance abuse, schizophrenia, mania, sexual offending, risky sexual behavior, dieting, and the anxiety disorders. A second explanation for the multitude of definitions for relapse is the inherent complexity in the process of behavior change. In this paper we present the most recent treatment outcome research evaluating relapse rates, with a special focus on the substance use disorders. Following this review of the literature we present an argument for the operationalization of relapse as a dynamic process, which can be empirically characterized using dynamical systems theory. We support this argument by presenting results from the analysis of alcohol treatment outcomes using catastrophe modeling techniques. These results demonstrate the utility of catastrophe theory in modeling the alcohol relapse process. The implications of these analyses for the treatment of alcohol use disorders, as well as a discussion of future research incorporating nonlinear dynamical systems theory is provided.},
-  file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\ZZTXV2XT\\Witkiewitz and Marlatt - 2007 - Modeling the complexity of post-treatment drinking.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\R5LGSHIB\\S0272735807000062.html}
+  keywords = {risk2_protocol_paper},
+  file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\HYRPLJWT\\Witkiewitz and Marlatt - 2007 - Modeling the complexity of post-treatment drinking.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\RUEYI3AF\\Witkiewitz and Marlatt - 2007 - Modeling the complexity of post-treatment drinking.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\ZZTXV2XT\\Witkiewitz and Marlatt - 2007 - Modeling the complexity of post-treatment drinking.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\EXXKR8RX\\S0272735807000062.html;C\:\\Users\\kpaquette2\\Zotero\\storage\\KYWAKVPE\\S0272735807000062.html}
 }
 
-@article{witkiewitzPredictorsHeavyDrinking2011a,
-  title = {Predictors of {{Heavy Drinking During}} and {{Following Treatment}}},
+@article{witkiewitzPredictorsHeavyDrinking2011,
+  title = {Predictors of Heavy Drinking during and Following Treatment},
   author = {Witkiewitz, Katie},
   year = {2011},
   month = sep,
-  journal = {Psychology of addictive behaviors : journal of the Society of Psychologists in Addictive Behaviors},
+  journal = {Psychology of Addictive Behaviors},
   volume = {25},
   number = {3},
   pages = {426--438},
-  issn = {0893-164X},
+  issn = {1939-1501},
   doi = {10.1037/a0022889},
-  urldate = {2025-10-01},
-  abstract = {Alcohol dependence has been described as a relapsing condition and it has been proposed that alcohol lapses could potentially be explained by dynamic associations between contextual, interpersonal, and intrapersonal risk factors. Yet, few studies have tested the associations between risk factors in the prediction of lapse dynamics. The current study was a secondary analysis of data from the COMBINE study (n=1,383; ). The goal of the current study was to examine static (alcohol dependence severity, treatment history, marital status, psychiatric symptoms) and dynamic (negative affect, craving, stress) predictors of heavy drinking during the course of treatment and up to one year following treatment. Results from dynamic latent difference score models indicated that higher levels of static and dynamic risk and increased dynamic risk over time were significantly associated with greater increases in heavy drinking. Likewise, more frequent heavy drinking and higher static risk predicted higher levels of dynamic risk. In addition, changes in dynamic risk factors significantly mediated the association between changes in heavy drinking and both psychiatric symptoms and treatment history. It is important to note that while the effects of static and dynamic risk factors in the prediction of heavy drinking were statistically significant, the magnitude of the effects were small. The current study provided partial support for a dynamic model of relapse; however future research using intensive longitudinal data collection and more advanced statistical techniques could further elucidate lapse dynamics and potentially improve relapse prevention planning.},
+  abstract = {Alcohol dependence has been described as a relapsing condition and it has been proposed that alcohol lapses could potentially be explained by dynamic associations between contextual, interpersonal, and intrapersonal risk factors. Yet, few studies have tested the associations between risk factors in the prediction of lapse dynamics. The current study was a secondary analysis of data from the COMBINE study (n = 1,383; COMBINE Study Research Group, 2003). The goal of the current study was to examine static (alcohol dependence severity, treatment history, marital status, psychiatric symptoms) and dynamic (negative affect, craving, stress) predictors of heavy drinking during the course of treatment and up to one year following treatment. Results from dynamic latent difference score models indicated that higher levels of static and dynamic risk and increased dynamic risk over time were significantly associated with greater increases in heavy drinking. Likewise, more frequent heavy drinking and higher static risk predicted higher levels of dynamic risk. In addition, changes in dynamic risk factors significantly mediated the association between changes in heavy drinking and both psychiatric symptoms and treatment history. It is important to note that while the effects of static and dynamic risk factors in the prediction of heavy drinking were statistically significant, the magnitude of the effects were small. The current study provided partial support for a dynamic model of relapse; however future research using intensive longitudinal data collection and more advanced statistical techniques could further elucidate lapse dynamics and potentially improve relapse prevention planning.},
+  langid = {english},
   pmcid = {PMC3236107},
   pmid = {21480681},
-  file = {C:\Users\kpaquette2\Zotero\storage\2W8RINW5\Witkiewitz - 2011 - Predictors of Heavy Drinking During and Following .pdf}
+  keywords = {Adult,Affect,Alcohol Drinking,Alcoholism,Female,Humans,Longitudinal Studies,Male,Marital Status,Middle Aged,Models Psychological,Recurrence,Risk Factors,risk2_protocol_paper,Self Efficacy,Severity of Illness Index,Stress Psychological,Temperance,Treatment Outcome},
+  file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\2W8RINW5\\Witkiewitz - 2011 - Predictors of Heavy Drinking During and Following .pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\ELDNDXS9\\Witkiewitz - 2011 - Predictors of heavy drinking during and following .pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\SJML7NC8\\Witkiewitz - 2011 - Predictors of heavy drinking during and following .pdf}
 }
 
-@article{witkiewitzRelapsePreventionAlcohol2004a,
-  title = {Relapse Prevention for Alcohol and Drug Problems: That Was {{Zen}}, This Is {{Tao}}},
-  shorttitle = {Relapse Prevention for Alcohol and Drug Problems},
+@article{witkiewitzRelapsePreventionAlcohol2004,
+  title = {Relapse Prevention for Alcohol and Drug Problems: {{That}} Was Zen, This Is Tao},
+  shorttitle = {Relapse {{Prevention}} for {{Alcohol}} and {{Drug Problems}}},
   author = {Witkiewitz, Katie and Marlatt, G. Alan},
   year = {2004},
-  journal = {The American Psychologist},
+  month = may,
+  journal = {American Psychologist},
   volume = {59},
   number = {4},
   pages = {224--235},
-  issn = {0003-066X},
+  issn = {1935-990X},
   doi = {10.1037/0003-066X.59.4.224},
-  abstract = {Relapse prevention, based on the cognitive-behavioral model of relapse, has become an adjunct to the treatment of numerous psychological problems, including (but not limited to) substance abuse, depression, sexual offending, and schizophrenia. This article provides an overview of the efficacy and effectiveness of relapse prevention in the treatment of addictive disorders, an update on recent empirical support for the elements of the cognitive-behavioral model of relapse, and a review of the criticisms of relapse prevention. In response to the criticisms, a reconceptualized cognitive-behavioral model of relapse that focuses on the dynamic interactions between multiple risk factors and situational determinants is proposed. Empirical support for this reconceptualization of relapse, the future of relapse prevention, and the limitations of the new model are discussed.},
-  langid = {english},
-  pmid = {15149263},
-  keywords = {Alcoholism,Cognitive Behavioral Therapy,Humans,Models Psychological,Recurrence,Substance-Related Disorders}
+  urldate = {2013-06-13},
+  abstract = {Relapse prevention, based on the cognitive-behavioral model of relapse, has become an adjunct to the treatment of numerous psychological problems, including (but not limited to) substance abuse, depression, sexual offending, and schizophrenia. This article provides an overview of the efficacy and effectiveness of relapse prevention in the treatment of addictive disorders, an update on recent empirical support for the elements of the cognitive-behavioral model of relapse, and a review of the criticisms of relapse prevention. In response to the criticisms, a reconceptualized cognitive-behavioral model of relapse that focuses on the dynamic interactions between multiple risk factors and situational determinants is proposed. Empirical support for this reconceptualization of relapse, the future of relapse prevention, and the limitations of the new model are discussed. (PsycINFO Database Record (c) 2012 APA, all rights reserved) (journal abstract)},
+  keywords = {addiction,addictive disorders,alcohol problems,Alcoholism,Cognitive behavior therapy,Cognitive Behavioral Therapy,cognitive-behavioral model,Drug abuse,drug problems,Drug Rehabilitation,Humans,Models,Models Psychological,Recurrence,relapse prevention,risk2_protocol_paper,Substance-Related Disorders,treatment efficacy,Treatment Outcomes},
+  file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\84R9SEMB\\Witkiewitz and Marlatt - 2004 - Relapse Prevention for Alcohol and Drug Problems .pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\JQ8H7SAA\\Witkiewitz and Marlatt - 2004 - Relapse Prevention for Alcohol and Drug Problems .pdf}
 }
 
-@article{wyantAcceptabilityPersonalSensing2023a,
+@article{wyantAcceptabilityPersonalSensing2023,
   title = {Acceptability of {{Personal Sensing Among People With Alcohol Use Disorder}}: {{Observational Study}}},
   shorttitle = {Acceptability of {{Personal Sensing Among People With Alcohol Use Disorder}}},
   author = {Wyant, Kendra and Moshontz, Hannah and Ward, Stephanie B. and Fronk, Gaylen E. and Curtin, John J.},
@@ -1875,13 +1965,22 @@
   month = aug,
   journal = {JMIR mHealth and uHealth},
   volume = {11},
+  number = {1},
   pages = {e41833},
+  publisher = {JMIR Publications Inc., Toronto, Canada},
   doi = {10.2196/41833},
-  urldate = {2024-10-17},
-  abstract = {Personal sensing may improve digital therapeutics for mental health care by facilitating early screening, symptom monitoring, risk prediction, and personalized adaptive interventions. However, further development and the use of personal sensing ...},
+  urldate = {2023-09-15},
+  abstract = {Background: Personal sensing may improve digital therapeutics for mental health care by facilitating early screening, symptom monitoring, risk prediction, and personalized adaptive interventions. However, further development and the use of personal sensing requires a better understanding of its acceptability to people targeted for these applications. Objective: We aimed to assess the acceptability of active and passive personal sensing methods in a sample of people with moderate to severe alcohol use disorder using both behavioral and self-report measures. This sample was recruited as part of a larger grant-funded project to develop a machine learning algorithm to predict lapses. Methods: Participants (N=154; n=77, 50\% female; mean age 41, SD 11.9 years; n=134, 87\% White and n=150, 97\% non-Hispanic) in early recovery (1-8 weeks of abstinence) were recruited to participate in a 3-month longitudinal study. Participants were modestly compensated for engaging with active (eg, ecological momentary assessment [EMA], audio check-in, and sleep quality) and passive (eg, geolocation, cellular communication logs, and SMS text message content) sensing methods that were selected to tap into constructs from the Relapse Prevention model by Marlatt. We assessed 3 behavioral indicators of acceptability: participants' choices about their participation in the study at various stages in the procedure, their choice to opt in to provide data for each sensing method, and their adherence to a subset of the active methods (EMA and audio check-in). We also assessed 3 self-report measures of acceptability (interference, dislike, and willingness to use for 1 year) for each method. Results: Of the 192 eligible individuals screened, 191 consented to personal sensing. Most of these individuals (169/191, 88.5\%) also returned 1 week later to formally enroll, and 154 participated through the first month follow-up visit. All participants in our analysis sample opted in to provide data for EMA, sleep quality, geolocation, and cellular communication logs. Out of 154 participants, 1 (0.6\%) did not provide SMS text message content and 3 (1.9\%) did not provide any audio check-ins. The average adherence rate for the 4 times daily EMA was .80. The adherence rate for the daily audio check-in was .54. Aggregate participant ratings indicated that all personal sensing methods were significantly more acceptable (all P\&lt;.001) compared with neutral across subjective measures of interference, dislike, and willingness to use for 1 year. Participants did not significantly differ in their dislike of active methods compared with passive methods (P=.23). However, participants reported a higher willingness to use passive (vs active) methods for 1 year (P=.04). Conclusions: These results suggest that active and passive sensing methods are acceptable for people with alcohol use disorder over a longer period than has previously been assessed. Important individual differences were observed across people and methods, indicating opportunities for future improvement.},
+  copyright = {Unless stated otherwise, all articles are open-access distributed under the terms of the Creative Commons Attribution License (http://creativecommons.org/licenses/by/4.0/), which permits unrestricted use, distribution, and reproduction in any medium, provided the original work ("first published in JMIR mHealth and uHealth...") is properly cited with original URL and bibliographic citation information. The complete bibliographic information, a link to the original publication on http://mhealth.jmir.org/, as well as this copyright and license information must be included.},
   langid = {english},
-  pmid = {37639300},
-  file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\I3JUSCI8\\Wyant et al. - 2023 - Acceptability of Personal Sensing Among People Wit.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\JR55MRTC\\PMC10495858.html}
+  keywords = {Clinical Psychology,Social and Behavioral Sciences,Substance Abuse and Addiction},
+  file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\55VMT2R2\\Wyant et al. - 2022 - Acceptability of Personal Sensing Among People wit.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\R6LLQ57K\\Wyant et al. - 2023 - Acceptability of Personal Sensing Among People Wit.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\25GFCPP5\\e41833.html}
+}
+
+@article{wyantForecastingRiskAlcoholunderreview,
+  title = {Forecasting {{Risk}} of {{Alcohol Lapse}} up to {{Two Weeks}} in {{Advance}} Using {{Time-lagged Machine Learning Models}}},
+  author = {Wyant, Kendra and Fronk, Gaylen E. and Yu, Coco and Punturieri, Claire E. and Curtin, John J.},
+  year = {under review}
 }
 
 @article{wyantMachineLearningModels2024,
@@ -1899,6 +1998,12 @@
   abstract = {We developed three machine learning models that predict hour-by-hour probabilities of a future lapse back to alcohol use with increasing temporal precision (i.e., lapses in the next week, next day, and next hour). Model features were based on raw scores and longitudinal change in theoretically implicated risk factors collected through ecological momentary assessment. Participants (N = 151, 51\% male, Mage = 41, 87\% White, 97\% non-Hispanic) in early recovery (1--8 weeks of abstinence) from alcohol use disorder provided 4 {\texttimes} daily ecological momentary assessment for up to 3 months. We used grouped, nested cross-validation to select the best models and evaluate the performance of those best models. Models yielded median areas under the receiver operating curves of 0.89, 0.90, and 0.93 in the 30 held-out test sets for week-, day-, and hour-level models, respectively. Some feature categories consistently emerged as being globally important to lapse prediction across our week-, day-, and hour-level models (i.e., past use, future self-efficacy). However, most of the more punctate, time-varying constructs (e.g., craving, past stressful events, arousal) appear to have a greater impact within the next-hour prediction model. This research represents an important step toward the development of a smart (machine learning guided) sensing system that can both identify periods of peak lapse risk and recommend specific supports to address factors contributing to this risk. (PsycInfo Database Record (c) 2024 APA, all rights reserved)},
   keywords = {Alcohol Use Disorder,Ecological Momentary Assessment,Machine Learning,Models,Prediction,Risk Factors},
   file = {C:\Users\kpaquette2\Zotero\storage\DQXHDUV5\doiLanding.html}
+}
+
+@article{wyantMaximizingEngagementTrustunderreview,
+  title = {Maximizing Engagement, Trust, and Clinical Benefit of {{AI-generated}} Recovery Monitoring and Support Messages for Alcohol Use Disorder: {{Protocol}} for an Optimization Study},
+  author = {Wyant, Kendra and Sant'Ana, Sarah J. and Punturieri, Claire E. and Yu, Jiachen and Fronk, Gaylen E. and Maggard, C. Michael and Janssen, Christopher and Wanta, Susan E and Kornfield, Rachel and {van Swol}, Lyn M. and Curtin, John J.},
+  year = {under review}
 }
 
 @article{yeoEvaluationTrendsAlcohol2022,
