--- a/_manuscript/index.qmd
+++ b/_manuscript/index.qmd
@@ -53,10 +53,10 @@ Target Journal: JMIR Formative Research (1500 words)
 
 Goal word counts: 
 
-- Introduction: 300 words or about 3 paragraphs (currently 539 words)
+- Introduction: 350 words (currently 366 words)
 - Methods: 600 words (currently 614 words)
 - Results: 200 words (currently 194)
-- Discussion: 400 words
+- Discussion: 350 words
 -->
 
 ```{r}
@@ -79,18 +79,16 @@ contrast <- read_csv(here::here(path_models,
 
 # Introduction
 
-One of the biggest challenges in Alcohol Use Disorders (AUD) treatment stems from the chronic relapsing nature of this disease [@scottPathwaysRelapseTreatment2005]. People can relapse days, weeks, and even years after obtaining the goal of abstinence. At least 60% of AUD patients relapse to heavy drinking within 6 months following treatment [@nguyenPredictingRelapseAlcohol2020a; @witkiewitzPredictorsHeavyDrinking2011a; @kirshenbaumQuantitativeReviewUbiquitous2009].
-At most 50% of people with an AUD achieve remission after several years [@fleuryRemissionSubstanceUse2016; @heymanQuittingDrugsQuantitative2013].
+Alcohol Use Disorder (AUD) is a chronic, relapsing disease [@mclellanDrugDependenceChronic2000;@dennisManagingAddictionChronic2007; @rounsavilleLapseRelapseChasing2010]. Lapses, single episodes of alcohol use, and relapse, a full return to harmful drinking, can occur at any point in recovery [@scottPathwaysRelapseTreatment2005;@nguyenPredictingRelapseAlcohol2020a; @witkiewitzPredictorsHeavyDrinking2011; @kirshenbaumQuantitativeReviewUbiquitous2009]. As with other chronic health conditions where symptoms fluctuate, sometimes unexpectedly, sustained AUD recovery requires ongoing monitoring of lapse risk.
 
-Identifying initial lapses in early recovery is critical. Lapses -- single episodes of alcohol use -- are easy to define, have a clear onset, and are also clinically meaningful. They serve as an early warning sign of returning back to previous drinking behavior inconsistent with desired goals [@witkiewitzRelapsePreventionAlcohol2004a; @chungRelapseAlcoholOther2006a; @marlattRelapsePreventionMaintenance2005a]. Lapse predicts future lapses, with more frequent ones resulting in increased risks of relapse [@hogstrombrandtPredictionSingleEpisodes1999a; @witkiewitzRelapsePreventionAlcohol2004a].
+Machine learning–guided recovery systems may now assist with the inherently difficult task of identifying when and why someone is at increased risk. Personal sensing of densely sampled data from individuals' day-to-day lives can provide the inputs necessary for temporally dynamic lapse predictions [@mohrPersonalSensingUnderstanding2017]. Early models using ecological momentary assessment data have achieved excellent accuracy [@chihPredictiveModelingAddiction2014; @wyantMachineLearningModels2024; @wyantForecastingRiskAlcoholunderreview]. Still, questions remain about the long-term feasibility of self-report sensing methods and whether new, important risk factors might emerge from sensing methods that passively collect smartphone data without user input.
 
-Current predictions of alcohol lapses rely heavily on self reports, which can be burdensome to measure in long run. Machine learning models leveraging ecological momentary assessment (EMA) measures have performed relatively well to predict goal-inconsistent alcohol use [@wyantMachineLearningModels2024]. The surveys were collected up to four times daily for three months. However, constantly completing surveys makes it burdensome for AUD patients. Although most EMA relevant mental health research demonstrated modest compliance rates, their time windows last from two weeks to three months [@porras-segoviaSmartphonebasedEcologicalMomentary2020; @czyzEcologicalAssessmentDaily2018; @vangenugtenExperiencedBurdenAdherence2020; @mackesy-amitiFeasibilityEcologicalMomentary2018; @hungSmartphonebasedEcologicalMomentary2016]. The study length is insufficient because AUD is a chronic disease that requires constant risk monitoring. As extended period of time is anticipated, users' perceived burden of answering surveys is presumably larger [@mogkImplementationWorkflowStrategies2023]. Although minimizing the number of items in the surveys and the frequency of prompting users to complete the surveys might help mitigate the associated burden, it can inevitably reduce the prediction precision and temporal precision of predictions.
+Cellular communication sensing may be one promising method. It offers the potential for greater temporal specificity in capturing fluctuations in risk compared with self-report data. Collecting communication data in near real time could allow an algorithm to detect potential triggers as they occur, without prompting users to reflect on their feelings or waiting for users to report about their environement at a later point. For example, late night phone calls could indicate an emergency, "drunk dialing", or other risk-relevant interactions, while an expanding or shrinking social circle could be characterized by the number of unique contacts someone has communicated with.
 
-Passive cellular communication sensing represents new opportunities due to its feasibility, relatively low burden on individuals and continuous data collection. In a smartphone-based sensing platform the primary expense on the individual is the smartphone. Smartphone usage is already widespread. Eighty-five percent of US adults have a smartphone and this number is consistent across all sociodemographic groups, including those in recovery programs for substance use [@massonHealthrelatedInternetUse2019a; @pewresearchcenterMobileFactSheet2021a]. Studies collecting passive data have demonstrated high acceptability from participants and higher compliance rates compared to active measures [@wyantAcceptabilityPersonalSensing2023a; @beukenhorstUsingSmartphonesReduce2022a]. Further, risk monitoring using cellular sensing is temporally sensitive to fluctuating risks. Analyzing communication patterns can detect potential triggers in time without actively prompting users to reflect on their feelings at the moment or report their environment.
+These data may become even more powerful when communication contacts are contextualized with personal meaning for a given participant (e.g., Who is this contact to them? How pleasant or unpleasant is a typical interaction with them? Have they drank with them in the past?). In this scenario, contextualized communication logs might reveal that the late-night phone call was to a sponsor, or that the shrinking social circle was due to reduced contact with people who are unsupportive of their recovery.
 
-Cellular communications, with minimal contextual information, is embedded with potentially rich information that align with relapse antecedents. For example, social interactions can have important influences on drinking behavior [@hunter-reelEmphasizingInterpersonalFactors2009a; @alvarezSocialNetworkHeavy2021a]. We may be able to capture immediate risk based on who someone is calling or what time of day it is. Decreased interactions may signify isolation common with depressive symptoms, reaching out to people in one’s social network could signify a positive coping strategy, or changes in patterns between a single person in one’s social network could indicate conflict [@millerHowEffectiveAlcoholism2001a; @huffordRelapseNonlinearDynamic2003a; @chihPredictiveModelingAddiction2014a].
+In this study, we evaluated the performance of a machine learning model that predicts the probability of a next-day lapse using contextualized cellular communication data. We also describe the most important features contributing to these predictions, with the goal of identifying new, clinically meaningful features emerging from communication-based sensing.
 
-This study aims at building machine learning models from cellular communications that identify *who* are at heightened risk for alcohol lapses, *when* they will lapse, and *why* they are at increased risk.
 
 # Methods
 
